[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3.6"

[build-dependencies]
eyre = "0.6"
ethers = {version = "2.0.13", default-features = false, features = ["abigen", "solc-full", "ws", "rustls"] }

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
eyre = "0.6"
bytes = "1"
serde = "1.0"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive", "env"] }
reqwest = "0.11.24"
ethers = {version = "2.0.13", default-features = false, features = ["abigen", "solc-full", "ws", "rustls"] }
prometheus-client = "0.22.0"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
axum = "0.7.4"
anvil-rpc = { git = "https://github.com/foundry-rs/foundry" }
rocksdb = { version = "0.21.0", default-features = false }
serde_repr = "0.1"
rkyv = { version = "0.7.44", features = ["validation"] }
url = { version = "2.4", default-features = false }
futures = "0.3"
tower-http = { version = "0.5.1", features = ["trace"] }
tower = "0.4.13"
http-body-util = "0.1.0"

